...
                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cn4-BD-W0e">
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="noLike"/>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="like">
                                                        <color key="titleShadowColor" red="1" green="1" blue="1" alpha="0.20207141694568453" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                                    </state>
                                                    <connections>
                                                        <action selector="tapLikeButton:" destination="th1-to-pJ0" eventType="touchUpInside" id="xR2-aw-F6e"/>
...
                                <rect key="frame" x="166.66666666666666" y="396" width="60" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="60" id="9wT-qB-BGY"/>
                                    <constraint firstAttribute="height" constant="60" id="kL6-u7-MEF"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="Authenticate" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b4R-oF-ToB" userLabel="AuthButton">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="0v3-1m-9Hb"/>
                                </constraints>
...
