...
    
    override func viewDidLoad() {
        super.viewDidLoad()
        scrollView.minimumZoomScale = 0.1
        scrollView.maximumZoomScale = 1.25
        loadAndShowImage(url: image)
        backButton.accessibilityIdentifier = "singleViewBackButton"
    }
    
    func loadAndShowImage(url: URL?) {
        guard let url = url else { return }
        UIBlockingProgressHUD.show()
        
...
